feat: modificaciones para prod

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,10 @@
+STAGE=dev
+
 DB_USER=postgres
 DB_PASSWORD=adminDb
 DB_NAME=MayenDB
 DB_HOST=localhost
 DB_PORT=5432
+
+PORT=3000
+HOST_API=http://localhost:3000/api
